external-service/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: my-internal-service
  labels:
    # any Pods with matching labels are included in this Deployment
    app: external-service-poc
    tier: my-internal-service
spec:
  # ReplicaSet specification
  replicas: 3
  selector:
    matchLabels:
      # ReplicaSet labels will match Pods with the following labels
      tier: my-internal-service
  template:
    metadata:
      labels:
        # Pod's labels
        app: external-service-poc
        tier: my-internal-service
    spec:
      containers:
        - name: internal-service-container
          image: internal-service-sample:latest
          # Force local registry lookup
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
