external-service/external-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-dns-sample-external
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ExternalName
  externalName: affinipay.com
  selector:
    app: external-svc-poc
