external-service/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  # any Pods with matching labels are included in this Service
  name: my-internal-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: LoadBalancer
  selector:
    app: external-service-poc
